# lazarus

./: .dockerignore  .env.example  .gitignore  ACCESSIBILITY_REVIEW.md  AGENTS.md  API.md  API_TESTING_REVIEW.md  BACKEND_ARCHTECTURE_REVIEW.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FAQ.md  FEATURES.md  FRONTEND_ARCHITECTURE_IMPLEMENTATION_REVIEW.md  INSTALLATION.md  IPFS_STORAGE_GUIDE.md  LICENSE  LICENSE_VALIDATION_GUIDE.md  MANIFEST.in  PERFORMANCE_REVIEW.md  PRODUCTION_DEPLOYMENT.md  PROJECT_BOARD.md  QUICKSTART.md  README.md  REALITY_CHECKER_REVIEW.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_DEPLOYMENT.md  SECURITY_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_WEEK1.md  SECURITY_SUMMARY.md  SHIPPING_PLAN.md  SPRINT_1_SECURITY_IMPLEMENTATION.md  SPRINT_2_DATABASE_THREAD_SAFETY.md  SPRINT_PLAN.md  SYSTEMD_SETUP.md  TROUBLESHOOTING.md  WEB_DASHBOARD_SETUP.md  WINDOWS_FILE_PERMISSIONS.md  (+19 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: ci.yml
Desktop/forgeswarm/: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  config.yaml  forge_swarm_with_ui.py  requirements.txt  test_installation.py
Desktop/lazarus/: __main__.py  setup.py
Desktop/lazarus/agent/: __init__.py  heartbeat.py
Desktop/lazarus/cli/: setup.py
Desktop/lazarus/examples/: example_secrets.txt
Desktop/lazarus/tests/: test_config.py
agent/: alerts.py  heartbeat.py
assets/: README_BANNER.md  demo-instructions.md
cli/: __init__.py  main.py  setup.py
core/: __init__.py  config.py  database.py  encryption.py  license.py  migrations.py  rate_limiter.py  security.py  storage.py
decryption_kit/: README_FOR_BENEFICIARY.txt  decrypt.py
lazarus.egg-info/: SOURCES.txt  requires.txt
lazarus_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
marketing/: content-templates.md  demo-video-production-guide.md  discord-server-setup-guide.md  marketing-kit.md  promotional-content-strategy-guide.md  social-media-checklist.md  social-media-setup-guide.md
ssl/: README.md  generate-self-signed.sh
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_database.py  test_encryption.py  test_heartbeat.py  test_key_management.py  test_license.py  test_rate_limiter.py  test_security.py  test_sendgrid_integration.py  test_service_validation.py  test_stop_agent.py  test_thread_safety.py  test_windows_permissions.py
web/: dashboard-secure.html  dashboard.html  login.html  server.py
web/js/: security.js
